...
    case gallery
    case dailyFeeds

    var label: String {
        switch self {
        case .home:
            return "Home"
        case .pets:
            return "Pets"
        case .contacts:
            return "Contacts"
        case .events:
            return "Events"
        case .gallery:
            return "Gallery"
...
