...
            ToolbarItem(placement: .navigationBarTrailing) {
                Button("Edit") {
                    isEditing.toggle()
                    showingEditScreen.toggle()
                }
                .fontDesign(.rounded)
                .accessibilityIdentifier("PetDetail_EditButton")
            }

            ToolbarItem(placement: .navigationBarTrailing) {
                Button {
                    showingRemoveAlert = true
                } label: {
...
